# tiny

./: Cargo.toml  README.md
ev_loop/src/: lib.rs
examples/: chat.rs  colors.rs  completion.rs  msg_area_example.rs  paste.rs  tabs.rs  text.rs
iny/: Cargo.toml
iny/src/: lib.rs  ui.rs
iny/src/tui/: mod.rs
libtiny_client/: Cargo.toml
libtiny_client/src/: lib.rs
libtiny_tui/: Cargo.toml
libtiny_tui/examples/: bench.rs
libtiny_tui/src/: lib.rs  text_field.rs  tui.rs
src/: cmd.rs  config.rs  conn.rs  lib.rs  logger.rs  logger2.rs  notifier.rs  slack_conn.rs  trie.rs  utils.rs  wire.rs
src/stream/: mod.rs  tls.rs
src/tui/: messaging.rs  mod.rs  name_list.rs  tab.rs  tabbed.rs  text_field.rs
src/tui/msg_area/: line.rs  mod.rs
term_input/: Cargo.toml
term_input/examples/: test.rs
term_input/src/: lib.rs
term_input_futures/: Cargo.toml
term_input_futures/examples/: test.rs
term_input_std_futures/: Cargo.toml
term_input_std_futures/examples/: test.rs
termbox/: Cargo.toml
termbox/cbits/: bytebuffer.inl  term.inl  termbox.c  termbox.h
termbox/examples/: colors.rs  input.rs
termbox/src/: lib.rs
tiny/: Cargo.toml
tiny/src/: cmd.rs  config.rs  conn.rs  exit_dialogue.rs  main.rs  messaging.rs  tab.rs  termbox.rs  text_field.rs
tiny/src/msg_area/: line.rs
