[package]
name = "tiny"
version = "0.2.4"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"

[badges]
travis-ci = { repository = "osa1/tiny" }

[lib]
name = "tiny"
path = "src/lib.rs"

[[bin]]
name = "tiny"
path = "bin/main.rs"

[dependencies]
futures = "0.1.16"
libc = "0.2.22"
mio = "0.6.9"
native-tls = "0.1.4"
net2 = "0.2.23"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7.1"
slack = { path = "/home/omer/rust/slack-rs" }
slack_api = { path = "/home/omer/rust/slack-rs-api" }
term_input = "0.1.2"
termbox_simple = "0.2.0"
time = "0.1"
tokio-core = "0.1.9"
tungstenite = "0.4.0"
url = "1.5"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
rev = "a646bb56deccf7004d7069e5b13bbbf8042598d7"
features = ["unstable"]

[dev-dependencies]
quickcheck = "0.3"

[profile.release]
lto = true
