[package]
name = "tiny"
version = "0.2.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"

[badges]
travis-ci = { repository = "osa1/tiny" }

[lib]
name = "tiny"
path = "src/lib.rs"

[[bin]]
name = "tiny"
path = "bin/main.rs"

[dependencies]
futures = "0.1.16"
libc = "0.2.22"
mio = "0.6.9"
mio-more = { git = "https://github.com/osa1/mio-more" }
net2 = "0.2.23"
quick-error = "1.2.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.3"
serde_yaml = "0.7.1"
slack = { path = "/home/omer/rust/slack-rs" }
slack_api = { path = "/home/omer/rust/slack-rs-api" }
term_input = "0.1.2"
termbox_simple = "0.2.0"
time = "0.1"
tokio-core = "0.1.9"
websocket = "0.20.2"

[dependencies.reqwest]
version = "0.8.0"
features = ["unstable"]

[dev-dependencies]
quickcheck = "0.3"

[profile.release]
lto = true
